@@ -102,6 +102,7 @@ Version 1.3
    This fixes issue 451 (Justin)
  - Fixed issue 459 - Alarm Class Version 2 (Justin)
  - Fix DoorLockLogging Class not saving the Max Number of records (Justin)
+ - Fixed issue 470 - Qubino ZMNHDA2 device update thanks to kvervloesem (Alex)
 
 
 Version 1.2 
